--- a/about/index.html
+++ b/about/index.html
@@ -680,7 +680,7 @@ var IcarusThemeSettings = {
 </script>
 
 
-<script src="https://cdn.jsdelivr.net/npm/mathjax@2.7.5/unpacked/MathJax.min.js?config=TeX-MML-AM_CHTML" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/mathjax@2.7.5/unpacked/MathJax.js?config=TeX-MML-AM_CHTML" defer></script>
 <script>
 document.addEventListener('DOMContentLoaded', function () {
     MathJax.Hub.Config({
