--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+
+<!DOCTYPE html>
+<html  lang="zh">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="10; url=https://blog.itdevwu.com">
+    </head>
+</html>
+
+<!--
 <!DOCTYPE html>
 <html  lang="zh">
 <head>
@@ -1083,3 +1093,4 @@ document.addEventListener('DOMContentLoaded', function () {
     
 </body>
 </html>
+-->
