--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html  lang="zh">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="refresh" content="10; url=https://blog.itdevwu.com">
+    <meta charset="utf-8">"
+    <meta http-equiv="refresh" content="0; url=https://blog.itdevwu.com">
     </head>
 </html>
 
