--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <meta charset="utf-8">"
     <meta http-equiv="refresh" content="1; url=https://blog.itdevwu.com">
 </head>
-<p>Redirecting to: <a href="https://blog.itdevwu.com/">blog.itdevwu.com</a>
+<body>
+    <p>Redirecting to: <a href="https://blog.itdevwu.com/">blog.itdevwu.com</a></p>
+</body>
 </html>
