--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="zh">
 
 <head>
-    <meta charset="utf-8">"
-    <meta http-equiv="refresh" content="1; url=https://blog.itdevwu.com">
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=https://blog.itdevwu.com">
 </head>
 <body>
     <p>Redirecting to: <a href="https://blog.itdevwu.com/">blog.itdevwu.com</a></p>
